# xpublish-intake-provider

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pre-commit.yml  pypi.yml  tests.yml
tests/: test_dataset_provider.py
xpublish_intake_provider/: __init__.py  dataset_provider_plugin.py
