[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm[toml]>=3.4",
  "wheel",
]

[project]
name = "xpublish-intake-provider"
description = "Use Intake catalogs to load datasets into Xpublish"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
  { name = "Alex Kerney", email = "akerney@gmri.org" },
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "dependencies",
  "version",
]
urls.homepage = "https://github.com/xpublish-community/xpublish-intake-provider"
urls.repository = "https://github.com/xpublish-community/xpublish-intake-provider"

[tool.setuptools]
packages = [
  "xpublish_intake_provider",
]
zip-safe = false
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = [
  "requirements.txt",
] }

[tool.setuptools_scm]
write_to = "xpublish_intake_provider/_version.py"
write_to_template = "__version__ = '{version}'"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "PL",  # pylint
  "T20", # flake8-print
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
# Allow fastapi.Depends and other dependency injection style function arguments
flake8-bugbear.extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
]
per-file-ignores."docs/source/conf.py" = [
  "E402",
  "D100",
  "A001",
]
per-file-ignores."tests/*.py" = [
  "PLR2004",
  "D103",
  "D100",
]
# Use Google-style docstrings.
pydocstyle.convention = "google"

[tool.check-manifest]
ignore = [
  "xpublish_intake_provider/_version.py",
  "xpublish_intake_provider/**/__pycache__/*.pyc",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
fail-under = 95
exclude = [
  "setup.py",
  "docs",
  "tests",
]
verbose = 1
quiet = false
color = true
